@startuml Registrar_Nuevo_Anime
title Caso de Uso: Registrar Nuevo Animé (Serie)
skinparam sequenceMessageAlign center
skinparam responseMessageBelowArrow true
skinparam backgroundColor #FEFEFE
skinparam sequence {
    ArrowColor #7B68EE
    LifeLineBorderColor #9370DB
    ParticipantBackgroundColor #F5F5FF
    ParticipantBorderColor #9370DB
}

actor Usuario
participant "VentanaPrincipal\n(Vista)" as UI
participant "PanelAnime\n(Vista)" as Panel
participant "DialogoAnimeSerie\n(Diálogo)" as Dialog
participant "ServicioAnime\n(Controlador)" as Servicio
participant "RepositorioAnime\n(Interfaz)" as RepoI
participant "RepositorioAnimeArchivo\n(Implementación)" as Repo

== Flujo Principal ==

Usuario -> UI: Clic en pestaña "Catálogo"
activate UI

UI -> Panel: mostrar panel
activate Panel

Usuario -> Panel: Clic botón "+" (Nueva Serie)

Panel -> Dialog: new DialogoAnimeSerie(null)
activate Dialog

Dialog --> Usuario: Muestra formulario vacío

Usuario -> Dialog: Completa datos:\n- Título: "Naruto"\n- Año: 2002\n- Estudio: "Pierrot"\n- Capítulos: 220\n- Géneros: [SHONEN, ACCION]

Usuario -> Dialog: Clic "Guardar"

Dialog -> Servicio: registrarSerie(titulo, año, estudio, capitulos, generos, enEmision)
activate Servicio

note right of Servicio
  GRASP Controller:
  Coordina el caso de uso
  y aplica validaciones
end note

Servicio -> Servicio: validarTitulo(titulo)
Servicio -> Servicio: validarAnio(anio)
Servicio -> Servicio: validarCapitulos(capitulos)
Servicio -> Servicio: validarGeneros(generos)

Servicio -> RepoI: existePorTitulo("Naruto")
activate RepoI
RepoI -> Repo: existePorTitulo("Naruto")
activate Repo
Repo --> RepoI: false
deactivate Repo
RepoI --> Servicio: false
deactivate RepoI

note right of Servicio
  GRASP Creator:
  El servicio crea la instancia
  porque tiene la información necesaria
end note

Servicio -> Servicio: new AnimeSerie(titulo, año, estudio, capitulos, generos)

Servicio -> RepoI: guardar(anime)
activate RepoI

note right of RepoI
  SOLID DIP:
  Servicio depende de la interfaz,
  no de la implementación concreta
end note

RepoI -> Repo: guardar(anime)
activate Repo

note right of Repo
  GRASP Pure Fabrication:
  Clase técnica para persistencia
end note

Repo -> Repo: cargarSiNecesario()
Repo -> Repo: cache.add(anime)
Repo -> Repo: persistir()
Repo --> RepoI: void
deactivate Repo
RepoI --> Servicio: void
deactivate RepoI

Servicio --> Dialog: AnimeSerie creada
deactivate Servicio

Dialog -> Dialog: confirmado = true

Dialog -> Usuario: JOptionPane.showMessageDialog("Serie creada correctamente")

Dialog -> Dialog: dispose()
deactivate Dialog

Panel -> Panel: actualizarTabla()
Panel -> Servicio: listarOrdenadosPorTitulo()
activate Servicio
Servicio --> Panel: List<AnimeBase>
deactivate Servicio

Panel --> UI: Tabla actualizada
deactivate Panel

deactivate UI

== Flujo Alternativo: Título Duplicado ==

Usuario -> Dialog: Intenta crear anime con título existente
Dialog -> Servicio: registrarSerie(...)
activate Servicio
Servicio -> RepoI: existePorTitulo(titulo)
RepoI --> Servicio: true
Servicio -> Servicio: throw ExcepcionAnimeYaExistente
deactivate Servicio
Dialog -> Usuario: JOptionPane.showMessageDialog(\n"Ya existe un anime con el título: ...")

== Flujo Alternativo: Validación Fallida ==

Usuario -> Dialog: Deja título vacío
Dialog -> Servicio: registrarSerie("", ...)
activate Servicio
Servicio -> Servicio: validarTitulo("")
Servicio -> Servicio: throw ExcepcionValidacion("El título no puede estar vacío")
deactivate Servicio
Dialog -> Usuario: JOptionPane.showMessageDialog(\n"Error de validación: ...")

@enduml


@startuml Aplicar_Filtro
title Caso de Uso: Aplicar Filtro y Mostrar Resultados
skinparam sequenceMessageAlign center
skinparam backgroundColor #FEFEFE
skinparam sequence {
    ArrowColor #7B68EE
    LifeLineBorderColor #9370DB
    ParticipantBackgroundColor #F5F5FF
    ParticipantBorderColor #9370DB
}

actor Usuario
participant "PanelAnime\n(Vista)" as Panel
participant "FiltroAnime\n(Builder)" as Filtro
participant "ServicioAnime\n(Controlador)" as Servicio
participant "RepositorioAnime" as Repo
participant "CriterioOrdenamiento\n(Strategy)" as Ordenamiento

== Flujo Principal ==

Usuario -> Panel: Selecciona género "Shonen"
activate Panel

Usuario -> Panel: Selecciona calificación mínima 4

Usuario -> Panel: Clic "Buscar"

Panel -> Panel: aplicarFiltros()

note right of Panel
  La Vista solo captura datos
  y delega al servicio
  (Patrón MVC)
end note

Panel -> Filtro: new FiltroAnime()
activate Filtro

note right of Filtro
  Patrón Builder:
  Construye predicados
  de forma fluida
end note

Panel -> Filtro: porGenero(SHONEN)
Filtro --> Panel: this (encadenado)

Panel -> Filtro: porCalificacionMinima(4)
Filtro --> Panel: this (encadenado)

Panel -> Filtro: construir()
Filtro --> Panel: Predicate<AnimeBase>
deactivate Filtro

Panel -> Servicio: busquedaAvanzada(filtro)
activate Servicio

note right of Servicio
  GRASP Controller:
  Coordina la búsqueda
end note

Servicio -> Repo: obtenerTodos()
activate Repo
Repo --> Servicio: List<AnimeBase> (todos)
deactivate Repo

Servicio -> Servicio: animes.stream()\n  .filter(filtro.construir())\n  .collect()

note right of Servicio
  GRASP Information Expert:
  Cada anime responde si cumple
  el criterio (perteneceAGenero,
  cumpleCalificacionMinima)
end note

Servicio --> Panel: List<AnimeBase> (filtrados)
deactivate Servicio

Panel -> Panel: obtenerCriterioOrdenamiento()

Panel -> Ordenamiento: new OrdenamientoPorCalificacion(descendente=true)
activate Ordenamiento

note right of Ordenamiento
  SOLID OCP / GRASP Polymorphism:
  Criterio de ordenamiento
  intercambiable
end note

Panel -> Servicio: ordenar(listaFiltrada, criterio)
activate Servicio

Servicio -> Servicio: resultado.sort(criterio)

note right of Ordenamiento
  Strategy Pattern:
  El criterio define el algoritmo
  de comparación
end note

Servicio --> Panel: List<AnimeBase> (ordenada)
deactivate Servicio
deactivate Ordenamiento

Panel -> Panel: modeloTabla.establecerAnimes(resultado)

Panel --> Usuario: Tabla muestra anime filtrados\ny ordenados por calificación

deactivate Panel

== Flujo Alternativo: Sin Resultados ==

Usuario -> Panel: Aplica filtros muy restrictivos
Panel -> Servicio: busquedaAvanzada(filtro)
activate Servicio
Servicio --> Panel: List vacía
deactivate Servicio
Panel --> Usuario: Tabla vacía

== Flujo: Limpiar Filtros ==

Usuario -> Panel: Clic "Limpiar filtros"
activate Panel

Panel -> Panel: limpiarFiltros()
Panel -> Panel: txtBusqueda.setText("")
Panel -> Panel: cmbGenero.setSelectedIndex(0)
Panel -> Panel: cmbEstado.setSelectedIndex(0)
Panel -> Panel: spnCalificacionMin.setValue(0)

Panel -> Panel: actualizarTabla()
Panel -> Servicio: listarOrdenadosPorTitulo()
activate Servicio
Servicio --> Panel: List<AnimeBase> (todos)
deactivate Servicio

Panel --> Usuario: Tabla muestra todos los anime

deactivate Panel

@enduml


@startuml Obtener_Recomendaciones
title Caso de Uso: Obtener Recomendaciones
skinparam sequenceMessageAlign center
skinparam backgroundColor #FEFEFE
skinparam sequence {
    ArrowColor #7B68EE
    LifeLineBorderColor #9370DB
    ParticipantBackgroundColor #F5F5FF
    ParticipantBorderColor #9370DB
}

actor Usuario
participant "PanelRecomendaciones\n(Vista)" as Panel
participant "ServicioRecomendacion\n(Controlador)" as Servicio
participant "CriterioRecomendacion\n(Strategy)" as Criterio
participant "RepositorioAnime" as Repo

== Flujo: Top por Género ==

Usuario -> Panel: Selecciona "Top por Género"
Usuario -> Panel: Selecciona género "Shonen"
Usuario -> Panel: Cantidad: 5

Usuario -> Panel: Clic "Obtener Recomendaciones"
activate Panel

Panel -> Servicio: obtenerTopPorGenero(SHONEN, 5)
activate Servicio

note right of Servicio
  GRASP Controller:
  Coordina el caso de uso
end note

Servicio -> Criterio: new RecomendacionTopPorGenero(SHONEN)
activate Criterio

note right of Criterio
  SOLID OCP:
  Para nuevos criterios,
  se agregan nuevas clases
  sin modificar las existentes
end note

Servicio -> Servicio: obtenerRecomendaciones(criterio, 5)

Servicio -> Repo: obtenerTodos()
activate Repo
Repo --> Servicio: List<AnimeBase>
deactivate Repo

Servicio -> Criterio: recomendar(animes, 5)

note right of Criterio
  GRASP Strategy/Polymorphism:
  El criterio específico
  implementa su algoritmo
end note

Criterio -> Criterio: animes.stream()\n  .filter(a -> a.perteneceAGenero(genero))\n  .filter(AnimeBase::tieneCalificacion)\n  .sorted(porCalificacion.reversed())\n  .limit(5)

Criterio --> Servicio: List<AnimeBase> (top 5)
deactivate Criterio

Servicio --> Panel: List<AnimeBase>
deactivate Servicio

Panel -> Panel: modeloTabla.establecerAnimes(resultados)
Panel -> Panel: lblDescripcion.setText(\n  "Top 5 anime de género Shonen")

Panel --> Usuario: Muestra tabla con Top 5\nShonen mejor calificados

deactivate Panel

@enduml


@startuml Agregar_A_Lista
title Caso de Uso: Agregar Anime a Lista Personalizada
skinparam sequenceMessageAlign center
skinparam backgroundColor #FEFEFE
skinparam sequence {
    ArrowColor #7B68EE
    LifeLineBorderColor #9370DB
    ParticipantBackgroundColor #F5F5FF
    ParticipantBorderColor #9370DB
}

actor Usuario
participant "PanelListas" as Panel
participant "ServicioListaPersonalizada" as Servicio
participant "RepositorioListaPersonalizada" as RepoLista
participant "RepositorioAnime" as RepoAnime

== Flujo Principal ==

Usuario -> Panel: Selecciona lista en panel izquierdo
Usuario -> Panel: Selecciona anime de tabla disponibles
Usuario -> Panel: Clic "Agregar a lista"
activate Panel

Panel -> Servicio: agregarAnimeALista("Favoritos", "Naruto")
activate Servicio

note right of Servicio
  GRASP Controller:
  Coordina la operación
  entre lista y anime
end note

Servicio -> RepoLista: buscarPorNombre("Favoritos")
activate RepoLista
RepoLista --> Servicio: ListaPersonalizada
deactivate RepoLista

Servicio -> RepoAnime: buscarPorTitulo("Naruto")
activate RepoAnime
RepoAnime --> Servicio: AnimeBase
deactivate RepoAnime

Servicio -> Servicio: lista.agregarAnime(anime)

note right of Servicio
  GRASP Information Expert:
  La lista sabe cómo
  agregar un anime
end note

Servicio -> RepoLista: guardar(lista)
activate RepoLista
RepoLista --> Servicio: void
deactivate RepoLista

Servicio --> Panel: true (agregado)
deactivate Servicio

Panel -> Panel: actualizarTablaAnimesLista()
Panel -> Usuario: JOptionPane.showMessageDialog(\n  "Anime agregado a la lista")

deactivate Panel

== Flujo Alternativo: Anime ya existe en lista ==

Usuario -> Panel: Intenta agregar anime que ya está
Panel -> Servicio: agregarAnimeALista(...)
activate Servicio
Servicio -> Servicio: lista.agregarAnime(anime)

note right of Servicio
  La lista verifica
  si ya contiene el anime
end note

Servicio --> Panel: false (ya existía)
deactivate Servicio
Panel -> Usuario: "El anime ya está en esa lista"

@enduml


@startuml Arquitectura_Capas
title Arquitectura por Capas del Sistema
skinparam componentStyle uml2
skinparam backgroundColor #FEFEFE
skinparam component {
    BackgroundColor #F5F5FF
    BorderColor #9370DB
}

package "Capa de Presentación (vista)" #E8E8FF {
  [VentanaPrincipal]
  [PanelAnime]
  [PanelListas]
  [PanelRecomendaciones]
  [PanelEstadisticas]
}

package "Capa de Servicios (servicio)" #FFE8FF {
  [ServicioAnime]
  [ServicioListaPersonalizada]
  [ServicioRecomendacion]
  [ServicioEstadisticas]
}

package "Capa de Repositorios (repositorio)" #E8FFE8 {
  interface "RepositorioAnime" as IAnimeRepo
  interface "RepositorioListaPersonalizada" as IListaRepo
  [RepositorioAnimeArchivo]
  [RepositorioListaPersonalizadaArchivo]
}

package "Capa de Dominio (modelo)" #FFFFE8 {
  [AnimeBase]
  [AnimeSerie]
  [AnimePelicula]
  [ListaPersonalizada]
}

package "Utilidades (utilidad)" #FFE8E8 {
  [CriterioOrdenamiento]
  [CriterioRecomendacion]
  [FiltroAnime]
}

' Relaciones Vista -> Servicios
[VentanaPrincipal] --> [ServicioAnime]
[VentanaPrincipal] --> [ServicioListaPersonalizada]
[VentanaPrincipal] --> [ServicioRecomendacion]
[VentanaPrincipal] --> [ServicioEstadisticas]

' Relaciones Servicios -> Repositorios (Interfaces)
[ServicioAnime] --> IAnimeRepo
[ServicioListaPersonalizada] --> IAnimeRepo
[ServicioListaPersonalizada] --> IListaRepo
[ServicioRecomendacion] --> IAnimeRepo
[ServicioEstadisticas] --> IAnimeRepo

' Implementaciones
[RepositorioAnimeArchivo] ..|> IAnimeRepo
[RepositorioListaPersonalizadaArchivo] ..|> IListaRepo

' Servicios usan utilidades
[ServicioAnime] --> [CriterioOrdenamiento]
[ServicioAnime] --> [FiltroAnime]
[ServicioRecomendacion] --> [CriterioRecomendacion]

' Herencia en modelo
[AnimeSerie] --|> [AnimeBase]
[AnimePelicula] --|> [AnimeBase]

' Agregación
[ListaPersonalizada] o-- [AnimeBase]

note right of IAnimeRepo
  SOLID DIP:
  Los servicios dependen
  de abstracciones (interfaces),
  no de implementaciones concretas
end note

note left of [ServicioAnime]
  GRASP Controller:
  Coordina los casos de uso
  de la aplicación
end note

note bottom of [RepositorioAnimeArchivo]
  GRASP Pure Fabrication:
  Clase técnica que no representa
  un concepto del dominio
end note

@enduml

